--- a/src/Localization/Resources/SharedResource.ru.resx
+++ b/src/Localization/Resources/SharedResource.ru.resx
@@ -129,10 +129,16 @@
   <data name="PASSWORD" xml:space="preserve">
     <value>Пароль</value>
   </data>
+  <data name="PASSWORD_CONFIRM" xml:space="preserve">
+    <value>Подтверждение пароля</value>
+  </data>
   <data name="REGISTER" xml:space="preserve">
     <value>Регистрация</value>
   </data>
   <data name="USER" xml:space="preserve">
     <value>Пользователь</value>
+  </data>
+  <data name="USERNAME" xml:space="preserve">
+    <value>Имя пользователя</value>
   </data>
 </root>
