--- a/src/Localization/Resources/SharedResource.ru.resx
+++ b/src/Localization/Resources/SharedResource.ru.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EMAIL" xml:space="preserve">
+    <value>Электронная почта</value>
+  </data>
   <data name="HELLO" xml:space="preserve">
     <value>Привет</value>
   </data>
@@ -132,6 +135,9 @@
   <data name="PASSWORD_CONFIRM" xml:space="preserve">
     <value>Подтверждение пароля</value>
   </data>
+  <data name="PHONE" xml:space="preserve">
+    <value>Телефон</value>
+  </data>
   <data name="REGISTER" xml:space="preserve">
     <value>Регистрация</value>
   </data>
@@ -140,5 +146,11 @@
   </data>
   <data name="USERNAME" xml:space="preserve">
     <value>Имя пользователя</value>
+  </data>
+  <data name="VALIDATE_EMAIL" xml:space="preserve">
+    <value>Введенное значение не соответствует формату электронной почты</value>
+  </data>
+  <data name="VALIDATE_PHONE" xml:space="preserve">
+    <value>Введенное значение не соответствует формату номера телефона</value>
   </data>
 </root>
