--- a/src/Localization/Resources/SharedResource.ru.resx
+++ b/src/Localization/Resources/SharedResource.ru.resx
@@ -120,6 +120,9 @@
   <data name="EMAIL" xml:space="preserve">
     <value>Электронная почта</value>
   </data>
+  <data name="ERROR_USER_ALREDY_EXIST" xml:space="preserve">
+    <value>Пользователь с таким именем уже существует</value>
+  </data>
   <data name="HELLO" xml:space="preserve">
     <value>Привет</value>
   </data>
