--- a/src/Localization/Resources/SharedResource.resx
+++ b/src/Localization/Resources/SharedResource.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="COMPANY" xml:space="preserve">
+    <value>COMPANY</value>
+  </data>
+  <data name="COMPANYNAME" xml:space="preserve">
+    <value>COMPANYNAME</value>
+  </data>
   <data name="EMAIL" xml:space="preserve">
     <value>EMAIL</value>
   </data>
@@ -146,6 +152,21 @@
   </data>
   <data name="REGISTER" xml:space="preserve">
     <value>REGISTER</value>
+  </data>
+  <data name="STORAGECELLS" xml:space="preserve">
+    <value>STORAGECELLS</value>
+  </data>
+  <data name="STORAGENAME" xml:space="preserve">
+    <value>STORAGENAME</value>
+  </data>
+  <data name="STORAGEROWS" xml:space="preserve">
+    <value>STORAGEROWS</value>
+  </data>
+  <data name="STORAGETIERS" xml:space="preserve">
+    <value>STORAGETIERS</value>
+  </data>
+  <data name="STORENAME" xml:space="preserve">
+    <value>STORENAME</value>
   </data>
   <data name="USER" xml:space="preserve">
     <value>USER</value>
