add remains, storeord, documens

--- a/src/Localization/Resources/SharedResource.ru.resx
+++ b/src/Localization/Resources/SharedResource.ru.resx
@@ -123,6 +123,12 @@
   <data name="COMPANYNAME" xml:space="preserve">
     <value>Наименование предприятия</value>
   </data>
+  <data name="DOCINPUT" xml:space="preserve">
+    <value>Приход</value>
+  </data>
+  <data name="DOCTYPE" xml:space="preserve">
+    <value>Тип документа</value>
+  </data>
   <data name="EMAIL" xml:space="preserve">
     <value>Электронная почта</value>
   </data>
