--- a/src/Localization/Resources/SharedResource.resx
+++ b/src/Localization/Resources/SharedResource.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CELLFROM" xml:space="preserve">
+    <value>CELLFROM</value>
+  </data>
+  <data name="CELLTO" xml:space="preserve">
+    <value>CELLTO</value>
+  </data>
+  <data name="CELL_NOT_FOUND" xml:space="preserve">
+    <value>CELL_NOT_FOUND</value>
+  </data>
   <data name="COMPANY" xml:space="preserve">
     <value>COMPANY</value>
   </data>
@@ -128,6 +137,18 @@
   </data>
   <data name="COMPANYNEEDSAMPLEDATA" xml:space="preserve">
     <value>COMPANYNEEDSAMPLEDATA</value>
+  </data>
+  <data name="DOCDATE" xml:space="preserve">
+    <value>DOCDATE</value>
+  </data>
+  <data name="DOCINPUT" xml:space="preserve">
+    <value>DOCINPUTqqqqqq</value>
+  </data>
+  <data name="DOCNUMBER" xml:space="preserve">
+    <value>DOCNUMBER</value>
+  </data>
+  <data name="DOCTYPE" xml:space="preserve">
+    <value>DOCTYPE</value>
   </data>
   <data name="EMAIL" xml:space="preserve">
     <value>EMAIL</value>
@@ -141,14 +162,65 @@
   <data name="ERROR_USER_ALREDY_EXIST" xml:space="preserve">
     <value>ERROR_USER_ALREDY_EXIST</value>
   </data>
+  <data name="GOODNAME" xml:space="preserve">
+    <value>GOODNAME</value>
+  </data>
+  <data name="GOOD_ARTICLE" xml:space="preserve">
+    <value>GOOD_ARTICLE</value>
+  </data>
+  <data name="GOOD_CODE" xml:space="preserve">
+    <value>GOOD_CODE</value>
+  </data>
+  <data name="GOOD_DEPTH" xml:space="preserve">
+    <value>GOOD_DEPTH</value>
+  </data>
+  <data name="GOOD_HEIGHT" xml:space="preserve">
+    <value>GOOD_HEIGHT</value>
+  </data>
+  <data name="GOOD_NAME" xml:space="preserve">
+    <value>GOOD_NAME</value>
+  </data>
+  <data name="GOOD_WEIGHT" xml:space="preserve">
+    <value>GOOD_WEIGHT</value>
+  </data>
+  <data name="GOOD_WIDTH" xml:space="preserve">
+    <value>GOOD_WIDTH</value>
+  </data>
   <data name="HELLO" xml:space="preserve">
     <value>HELLO</value>
+  </data>
+  <data name="INPUTCELL" xml:space="preserve">
+    <value>INPUTCELL</value>
+  </data>
+  <data name="INPUTDATE" xml:space="preserve">
+    <value>INPUTDATE</value>
   </data>
   <data name="LOGIN" xml:space="preserve">
     <value>LOGIN</value>
   </data>
   <data name="LOGOUT" xml:space="preserve">
     <value>LOGOUT</value>
+  </data>
+  <data name="PARTNERNAME" xml:space="preserve">
+    <value>PARTNERNAME</value>
+  </data>
+  <data name="PARTNER_FULL_NAME" xml:space="preserve">
+    <value>PARTNER_FULL_NAME</value>
+  </data>
+  <data name="PARTNER_INN" xml:space="preserve">
+    <value>PARTNER_INN</value>
+  </data>
+  <data name="PARTNER_KPP" xml:space="preserve">
+    <value>PARTNER_KPP</value>
+  </data>
+  <data name="PARTNER_NAME" xml:space="preserve">
+    <value>PARTNER_NAME</value>
+  </data>
+  <data name="PARTNER_NOT_FOUND" xml:space="preserve">
+    <value>PARTNER_NOT_FOUND</value>
+  </data>
+  <data name="PARTNER_OGRN" xml:space="preserve">
+    <value>PARTNER_OGRN</value>
   </data>
   <data name="PASSWORD" xml:space="preserve">
     <value>PASSWORD</value>
@@ -158,6 +230,9 @@
   </data>
   <data name="PHONE" xml:space="preserve">
     <value>PHONE</value>
+  </data>
+  <data name="QUANTITY" xml:space="preserve">
+    <value>QUANTITY</value>
   </data>
   <data name="REGISTER" xml:space="preserve">
     <value>REGISTER</value>
@@ -176,6 +251,15 @@
   </data>
   <data name="STORENAME" xml:space="preserve">
     <value>STORENAME</value>
+  </data>
+  <data name="STORE_NOT_FOUND" xml:space="preserve">
+    <value>STORE_NOT_FOUND</value>
+  </data>
+  <data name="TOO_MANY_CELLS" xml:space="preserve">
+    <value>TOO_MANY_CELLS</value>
+  </data>
+  <data name="TOO_MANY_STORAGES" xml:space="preserve">
+    <value>TOO_MANY_STORAGES</value>
   </data>
   <data name="USER" xml:space="preserve">
     <value>USER</value>
